--- a/index.html
+++ b/index.html
@@ -5,80 +5,74 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Алексей Бортник</title>
-    <style>
-        body {
-            background-color: rgba(104, 104, 104, 0.849);
-            
-            max-width: 210mm;
-            margin-left: auto;
-            margin-right: auto;
-        }
-    </style>
+
 </head>
 
 <body>
+    <header>
+        <h1 style="font-size: 1px;">Front End Junior Developer</h1>
+        <div style="background-color: #e3e6df; border: 1px solid black;">
+            <div style="margin: 10px"></div>
+                <img src="cv_photo.jpg" height="200" alt="Какая есть)))">
+                
+                <h2>Бортник Алексей Григорьевич</h2>
+                <address>
+                    Телефон: <a href="tel:+375291596437">+375291596437</a>
+                    E-mail: <a href="mailto:aleksey.bortnik91@gmail.com"> Aleksey.bortnik91@gmail.com</a>
+                </address>
+                <h4>О себе:</h4>
+                <p>
+                    Ответственно подхожу к поставленным задачам, быстро вливаюсь в коллектив.<br>
+                    Вынослив, стрессоустойчив. Нацелен на постоянное профессиональное развитие,<br>
+                    совершенствование навыков и карьерный рост.
+                </p>
+                </div>
+    </header>
+    <main style="background-color: #e3e6df; border: 1px solid black;">
+        <h4>Образование:</h4>
+        <ul>
+            <li>
+                <b>Минский государственный архитектурно-строительный колледж</b>
+                <p>2008 - 2012</p>
+                <p>Техник– строитель.</p>
+                <p>Промышленное и гражданское строительство</p>
+                <p>Диплом 0695146</p>
+            </li>
+            <li>
+                <b>Полоцкий государственный университет</b>
+                <p>2012 - 2017</p>
+                <p>Инженер-строитель.</p>
+                <p>Промышленное и гражданское строительство</p>
+                <p>Диплом 1249710</p>
+            </li>
+        </ul>
 
-    <div style="background-color: #e3e6df; border: 1px solid black;">
-        <div style="margin: 10px">
-            <img src="cv_photo.jpg" height="200" alt="Какая есть)))">
+        <h4>Работа:</h4>
+        <ul>
+            <li>СУ № 2 ОАО «CТРОЙТРЕСТ №7»
+                Мастер общестроительного участка
+                01.08.2012–28.12.2015</li>
 
-            <span style="float: right; padding-top: 130px;">
-                Телефон: <a href="tel:+375291596437">+375291596437</a>
-                <br>
-                E-mail: <a href="mailto:aleksey.bortnik91@gmail.com"> Aleksey.bortnik91@gmail.com</a>
-            </span>
-            <h2>Бортник Алексей Григорьевич</h2>
+            <li>СП «ВЕСТТРАНСЛАЙН» ООО
+                Мастер эксплуатационно-ремонтной группы управления главного инженера.
+                01.12.2016–25.06.2018</li>
 
-            <h4>О себе:</h4>
+            <li>ООО «Поисковая оптимизация»
+                Менеджер
+                05.12.2018–20.03.2020</li>
 
-            <div> Ответственно подхожу к поставленным задачам, быстро вливаюсь в коллектив.
-            </div>
-            <div>
-                Вынослив, стрессоустойчив. Нацелен на постоянное профессиональное развитие,
-            </div>
-            <div>совершенствование навыков и карьерный рост.</div>
+        </ul>
+    </main>
+    <footer style="background-color: #597997; border: 1px solid black;">
+        <h4 style="color: seashell;">Социальные сети:</h4>
+        <ul>
+            <li><a style="color: seashell;" href="https://instagram.com/aleksey_md15">instagram</a></li>
+            <li><a style="color: seashell;" href="https://www.facebook.com/profile.php?id=100034052861910">facebook</a>
+            </li>
+            <li><a style="color: seashell;" href="https://t.me/Aleksey_md15">Telegram</a></li>
+        </ul>
 
-            <h4>Образование:</h4>
-            <ul>
-                <li>
-                    <b>Минский государственный архитектурно-строительный колледж</b>
-
-                    <div>2008 - 2012</div>
-                    <div>Техник– строитель.</div>
-                    <div>Промышленное и гражданское строительство</div>
-                    <div>Диплом 0695146</div>
-                </li>
-                <li>
-                    <b>Полоцкий государственный университет</b>
-
-                    <div>2012 - 2017</div>
-                    <div>Инженер-строитель.</div>
-                    <div>Промышленное и гражданское строительство</div>
-                    <div>Диплом 1249710</div>
-                </li>
-            </ul>
-
-            <h4>Работа:</h4>
-            <ul>
-                <li>СУ № 2 ОАО «CТРОЙТРЕСТ №7»
-                    Мастер общестроительного участка
-                    01.08.2012–28.12.2015</li>
-
-                <li>СП «ВЕСТТРАНСЛАЙН» ООО
-                    Мастер эксплуатационно-ремонтной группы управления главного инженера.
-                    01.12.2016–25.06.2018</li>
-
-                <li>ООО «Поисковая оптимизация»
-                    Менеджер
-                    05.12.2018–20.03.2020</li>
-
-            </ul>
-            <h4>Социальные сети:</h4>
-            <a href="https://instagram.com/aleksey_md15">instagram</a>
-            <a href="https://www.facebook.com/profile.php?id=100034052861910">facebook</a>
-            <a href="https://t.me/Aleksey_md15">Telegram</a>
-        </div>
-    </div>
+    </footer>
 </body>
 
 </html>
